Version 0.6.2 (unreleased)

* Allow setting an empty envelope-from ('<>') using '-s'.
  Change documentation accordingly.
  Update version and copyright dates.
  Fixes #54.
  Thomas Hochstein <thh@inter.net> Sat Jan 9 11:15:42 2016 +0100


Version 0.6.1 (2011-12-04)

* Fix annoying error message
  (and some small changes).
  Thomas Hochstein <thh@inter.net> Sun Dec 04 16:41:52 2011 +0200


Version 0.6 (2011-10-24)

* Don't temp-fail on random address check.
  Thomas Hochstein <thh@inter.net> Mon Oct 24 22:27:01 2011 +0200

* Fix regexp for syntax check.
  Thomas Hochstein <thh@inter.net> Sun Jul 24 12:28:26 2011 +0200


Version 0.5

* Add syntax check for mail addresses.
  Change documentation accordingly.
  Fixes #11.
  Thomas Hochstein <thh@inter.net> Sat Jul 23 23:53:22 2011 +0200


Version 0.4

* Add overrides for configuration (MAIL FROM/EHLO).
  New commandline options: -s <sender> and -e <EHLO>.
  Change documentation accordingly.
  Thomas Hochstein <thh@inter.net> Thu Jun 17 22:56:14 2010 +0200
    
* Replace splitaddress() by Mail::Address.
  Thomas Hochstein <thh@inter.net> Wed Jun 16 22:08:22 2010 +0200
    
* -r: Create a really random localpart.
  Add create_rand_addr().
  Thomas Hochstein <thh@inter.net> Wed Jun 16 21:51:50 2010 +0200

* Analyze failure codes, don't fail on temporary failures.
  Add analyze_smtp_reply().
  Fixes #8.
  Thomas Hochstein <thh@inter.net> Wed Jun 16 21:37:43 2010 +0200


Version 0.3

* Add Changelog.
  Thomas Hochstein <thh@inter.net> 2010-06-16 22:48:23 +0200

* Add documentation in POD format.
  - Drop checkmail.readme
  Thomas Hochstein <thh@inter.net> 2010-06-16 21:11:43 +0200

* Complete rewrite.
  - use strict;
  - modularize code
  - refactor application logic
  - more verbose output
  - test MXes in order of precedence
  - cope with multi-line responses
  - slightly change meaning of exit status
  - batch processing: set exit status to highest generated value
  Fixes #9.
  Fixes #10.